--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">DLP</string>
+    <string name="home">home</string>
+    <string name="map">map</string>
+    <string name="history">history</string>
 </resources>
