--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="Home_error_empty_group">생성된 그룹이 없습니다</string>
     <string name="Home_Button_createnewgroup">새로운 그룹 만들기</string>
     <string name="Home_insertgroupname">그룹 이름을 입력해주세요</string>
+    <string name="Home_insertgroupcode">그룹 코드를 입력해주세요</string>
     <string name="sharegroupcode">그룹 코드를 공유해주세요!</string>
     <string name="string_confirm">확인</string>
 </resources>
